--- a/styles/Home.css
+++ b/styles/Home.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   padding: 0 2rem;
 }
 
@@ -126,4 +126,8 @@
   .logo img {
     filter: invert(1);
   }
+} */
+
+.main{
+  color:red;
 }
