add responsive desktop

--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -12,6 +12,7 @@
 @import "./components/navbar";
 @import "./pages/header-home";
 @import "./layout/background";
+@import "./layout/page-header";
 
 body {
   font-family: $font-text;
@@ -30,343 +31,6 @@ body {
   }
 }
 
-.carousel {
-  // width: calc(100% - 48px);
-  // width: fit-content;
-  position: relative;
-  width: 100%;
-  height: 100%;
-
-  .carousel__nav {
-    position: absolute;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 30px;
-    top: 196px;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 800;
-    .dot {
-      content: "";
-      width: 10px;
-      height: 10px;
-      border-radius: 100%;
-      background-color: $color-primary;
-      opacity: 0.5;
-    }
-    .active {
-      // background-color: blue;
-      opacity: 1;
-    }
-    .option {
-      &__name {
-        text-transform: uppercase;
-        font-size: 14px;
-        color: $color-secondary;
-        font-weight: 100;
-        font-family: "Barlow Condensed";
-        letter-spacing: 2.36px;
-      }
-    }
-
-    .active {
-      position: relative;
-      .option__name {
-        color: $color-primary;
-      }
-
-      &::after {
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 3px;
-        bottom: 0;
-        left: 0;
-        background-color: $color-primary;
-      }
-    }
-  }
-
-  .carousel__viewport {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    overflow-x: scroll;
-    scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;
-  }
-}
-
-.slide {
-  position: relative;
-  width: calc(100vw - 48px);
-  height: 100%;
-  top: 0;
-  left: 0;
-
-  scroll-snap-align: start;
-  flex-shrink: 0;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  padding: 0 24px;
-
-  &__info {
-    display: flex;
-    flex-direction: column;
-    gap: 32px;
-    &__main {
-      position: relative;
-      padding-bottom: 32px;
-
-      &__title {
-        font-size: $heading-page;
-        font-family: $font-title;
-        font-weight: 400;
-        text-transform: uppercase;
-        color: $color-primary;
-        margin: 0;
-        margin-top: 74px;
-      }
-      &::after {
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 1px;
-        bottom: 0;
-        left: 0;
-        background-color: #ffffff;
-        opacity: 0.5;
-      }
-    }
-    &__extra {
-      display: flex;
-      flex-direction: column;
-      gap: 32px;
-      &__distance {
-        &__title {
-          font-family: $font-subtitle;
-          font-weight: 400;
-          font-size: 14px;
-          text-transform: uppercase;
-          letter-spacing: 2.36px;
-          margin: 0;
-          margin-bottom: 29px;
-        }
-        &__data {
-          font-family: $font-title;
-          color: $color-primary;
-          text-transform: uppercase;
-          font-size: 28px;
-          margin: 0;
-        }
-      }
-      &__travel {
-        &__title {
-          font-family: $font-subtitle;
-          font-weight: 400;
-          font-size: 14px;
-          text-transform: uppercase;
-          letter-spacing: 2.36px;
-          margin: 0;
-          margin-bottom: 29px;
-        }
-        &__data {
-          font-family: $font-title;
-          color: $color-primary;
-          text-transform: uppercase;
-          font-size: 28px;
-          margin: 0;
-        }
-      }
-    }
-  }
-  &__picture {
-    position: relative;
-    width: 170px;
-    height: 170px;
-    .image {
-      position: absolute;
-      height: 100%;
-      width: 100%;
-      top: 0;
-      left: 0;
-    }
-  }
-}
-
-.page-header {
-  text-align: center;
-  margin-bottom: 32px;
-  margin-top: 24px;
-  &__title {
-    color: $color-primary;
-    font-family: "Barlow Condensed";
-    font-weight: 400;
-    text-transform: uppercase;
-    font-size: 16px;
-    letter-spacing: 2.7px;
-    .page-index {
-      font-weight: bold;
-      margin-right: 18px;
-      opacity: 0.5;
-    }
-  }
-}
-
-.section {
-  &--crew {
-    .carousel {
-      &__nav {
-        // position: absolute;
-        // display: flex;
-        // flex-direction: row;
-        // justify-content: center;
-        gap: 30px;
-        top: 287px;
-        // left: 50%;
-        // transform: translateX(-50%);
-        // z-index: 800;
-        .active {
-          &::after {
-            display: none;
-          }
-        }
-      }
-    }
-    .slide {
-      &__info {
-        // margin-top: 74px;
-        // padding-top: 74px;
-        &__main {
-          padding-top: 100px;
-          &__subtitle {
-            font-size: 16px;
-            font-weight: 400;
-            font-family: $font-title;
-            text-transform: uppercase;
-            opacity: 0.5;
-          }
-          &__title {
-            font-size: 24px;
-            margin-top: 8px;
-            margin-bottom: 16px;
-          }
-          &::after {
-            content: "";
-            position: absolute;
-            width: 100%;
-            height: 1px;
-            top: 0;
-            left: 0;
-            background-color: #ffffff;
-            opacity: 0.1;
-          }
-        }
-        &__extra {
-          display: none;
-        }
-      }
-      &__picture {
-        position: relative;
-        width: 327px;
-        height: 223px;
-        .image {
-          position: absolute;
-          height: 100%;
-          width: 100%;
-          top: 0;
-          left: 0;
-          object-fit: contain;
-        }
-      }
-    }
-  }
-
-  &--technology {
-    .carousel {
-      &__nav {
-        // position: absolute;
-        // display: flex;
-        // flex-direction: row;
-        // justify-content: center;
-        gap: 30px;
-        top: 204px;
-        // left: 50%;
-        // transform: translateX(-50%);
-        // z-index: 800;
-        .dot {
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          height: 40px;
-          width: 40px;
-          border: 1px solid $color-primary;
-          opacity: 1;
-          background-color: transparent;
-          color: $color-primary;
-        }
-
-        .active {
-          background-color: $color-primary;
-          color: $bg-color;
-          font-family: "Bellefair";
-          font-size: 16px;
-          &::after {
-            display: none;
-          }
-        }
-      }
-    }
-    .slide {
-      padding: 0;
-      width: 100%;
-      &__info {
-        // margin-top: 100px;
-        // margin-top: 74px;
-        // padding-top: 74px;
-        &__main {
-          padding: 0 24px;
-          padding-top: 100px;
-
-          &__subtitle {
-            font-size: 14px;
-            font-weight: 400;
-            font-family: $font-subtitle;
-            text-transform: uppercase;
-            letter-spacing: 2.36px;
-          }
-          &__title {
-            font-size: 24px;
-            margin-top: 8px;
-            margin-bottom: 16px;
-          }
-          &::after {
-            display: none;
-          }
-        }
-        &__extra {
-          display: none;
-        }
-      }
-      &__picture {
-        position: relative;
-        width: 100%;
-        height: 170px;
-        .image {
-          position: absolute;
-          height: 100%;
-          width: 100%;
-          top: 0;
-          left: 0;
-          object-fit: contain;
-        }
-      }
-    }
-  }
-}
+@import "./components/carousel";
+@import "./components/slide";
+@import "./layout/sections";
