--- a/styles/main.css
+++ b/styles/main.css
@@ -285,6 +285,36 @@
   }
 }
 
+.page-header {
+  text-align: center;
+  margin-top: 24px;
+}
+@media all and (min-width: 800px) {
+  .page-header {
+    text-align: left;
+    margin-left: 165px;
+    margin-top: 76px;
+  }
+}
+.page-header__title {
+  color: #ffffff;
+  font-family: "Barlow Condensed";
+  font-weight: 400;
+  text-transform: uppercase;
+  font-size: 16px;
+  letter-spacing: 2.7px;
+}
+@media all and (min-width: 800px) {
+  .page-header__title {
+    font-size: 28px;
+  }
+}
+.page-header__title .page-index {
+  font-weight: bold;
+  margin-right: 18px;
+  opacity: 0.5;
+}
+
 body {
   font-family: "Barlow";
   background-color: #0b0d17;
@@ -308,6 +338,12 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
+  margin-top: 32px;
+}
+@media all and (min-width: 800px) {
+  .carousel {
+    margin-top: 97px;
+  }
 }
 .carousel .carousel__nav {
   position: absolute;
@@ -319,6 +355,14 @@ body {
   left: 50%;
   transform: translateX(-50%);
   z-index: 800;
+}
+@media all and (min-width: 800px) {
+  .carousel .carousel__nav {
+    position: absolute;
+    top: 0;
+    left: 832px;
+    transform: translateX(0);
+  }
 }
 .carousel .carousel__nav .dot {
   content: "";
@@ -338,6 +382,12 @@ body {
   font-weight: 100;
   font-family: "Barlow Condensed";
   letter-spacing: 2.36px;
+}
+@media all and (min-width: 800px) {
+  .carousel .carousel__nav .option__name {
+    font-size: 16px;
+    letter-spacing: 2.7px;
+  }
 }
 .carousel .carousel__nav .active {
   position: relative;
@@ -379,23 +429,50 @@ body {
   text-align: center;
   padding: 0 24px;
 }
+@media all and (min-width: 800px) {
+  .slide {
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0 165px;
+    width: calc(100vw - 330px);
+    text-align: left;
+  }
+}
 .slide__info {
   display: flex;
   flex-direction: column;
   gap: 32px;
+}
+@media all and (min-width: 800px) {
+  .slide__info {
+    width: 445px;
+  }
 }
 .slide__info__main {
   position: relative;
   padding-bottom: 32px;
 }
 .slide__info__main__title {
-  font-size: 56px;
+  font-size: 80px;
   font-family: "Bellefair";
   font-weight: 400;
   text-transform: uppercase;
   color: #ffffff;
   margin: 0;
   margin-top: 74px;
+}
+@media all and (min-width: 800px) {
+  .slide__info__main__title {
+    font-size: 100px;
+  }
+}
+.slide__info__main__description {
+  line-height: 25px;
+}
+@media all and (min-width: 800px) {
+  .slide__info__main__description {
+    line-height: 32px;
+  }
 }
 .slide__info__main::after {
   content: "";
@@ -411,6 +488,13 @@ body {
   display: flex;
   flex-direction: column;
   gap: 32px;
+}
+@media all and (min-width: 800px) {
+  .slide__info__extra {
+    flex-direction: row;
+    justify-content: flex-start;
+    column-gap: 66px;
+  }
 }
 .slide__info__extra__distance__title {
   font-family: "Barlow Condensed";
@@ -449,6 +533,12 @@ body {
   width: 170px;
   height: 170px;
 }
+@media all and (min-width: 800px) {
+  .slide__picture {
+    width: 445px;
+    height: 445px;
+  }
+}
 .slide__picture .image {
   position: absolute;
   height: 100%;
@@ -457,34 +547,32 @@ body {
   left: 0;
 }
 
-.page-header {
-  text-align: center;
-  margin-bottom: 32px;
-  margin-top: 24px;
-}
-.page-header__title {
-  color: #ffffff;
-  font-family: "Barlow Condensed";
-  font-weight: 400;
-  text-transform: uppercase;
-  font-size: 16px;
-  letter-spacing: 2.7px;
-}
-.page-header__title .page-index {
-  font-weight: bold;
-  margin-right: 18px;
-  opacity: 0.5;
-}
-
 .section--crew .carousel__nav {
   gap: 30px;
   top: 287px;
 }
+@media all and (min-width: 800px) {
+  .section--crew .carousel__nav {
+    top: auto;
+    bottom: 94px;
+    left: 165px;
+  }
+}
 .section--crew .carousel__nav .active::after {
   display: none;
 }
+@media all and (min-width: 800px) {
+  .section--crew .slide {
+    flex-direction: row-reverse;
+  }
+}
 .section--crew .slide__info__main {
   padding-top: 100px;
+}
+@media all and (min-width: 800px) {
+  .section--crew .slide__info__main {
+    width: 470px;
+  }
 }
 .section--crew .slide__info__main__subtitle {
   font-size: 16px;
@@ -493,10 +581,20 @@ body {
   text-transform: uppercase;
   opacity: 0.5;
 }
+@media all and (min-width: 800px) {
+  .section--crew .slide__info__main__subtitle {
+    font-size: 32px;
+  }
+}
 .section--crew .slide__info__main__title {
-  font-size: 24px;
   margin-top: 8px;
   margin-bottom: 16px;
+  font-size: 24px;
+}
+@media all and (min-width: 800px) {
+  .section--crew .slide__info__main__title {
+    font-size: 56px;
+  }
 }
 .section--crew .slide__info__main::after {
   content: "";
@@ -508,6 +606,11 @@ body {
   background-color: #ffffff;
   opacity: 0.1;
 }
+@media all and (min-width: 800px) {
+  .section--crew .slide__info__main::after {
+    display: none;
+  }
+}
 .section--crew .slide__info__extra {
   display: none;
 }
@@ -515,6 +618,12 @@ body {
   position: relative;
   width: 327px;
   height: 223px;
+}
+@media all and (min-width: 800px) {
+  .section--crew .slide__picture {
+    height: 681px;
+    width: 100%;
+  }
 }
 .section--crew .slide__picture .image {
   position: absolute;
@@ -524,9 +633,23 @@ body {
   left: 0;
   object-fit: contain;
 }
+@media all and (min-width: 800px) {
+  .section--technology .carousel {
+    width: calc(100% - 165px);
+    padding: 0 0 0 165px;
+    margin-top: 26px;
+  }
+}
 .section--technology .carousel__nav {
   gap: 30px;
   top: 204px;
+}
+@media all and (min-width: 800px) {
+  .section--technology .carousel__nav {
+    flex-direction: column;
+    left: 165px;
+    top: 111px;
+  }
 }
 .section--technology .carousel__nav .dot {
   display: flex;
@@ -534,14 +657,25 @@ body {
   justify-content: center;
   height: 40px;
   width: 40px;
-  border: 1px solid #ffffff;
-  opacity: 1;
   background-color: transparent;
   color: #ffffff;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  opacity: 1;
+}
+@media all and (min-width: 800px) {
+  .section--technology .carousel__nav .dot {
+    height: 80px;
+    width: 80px;
+  }
+}
+.section--technology .carousel__nav .dot:hover {
+  border: 1px solid rgb(255, 255, 255);
+  cursor: pointer;
 }
 .section--technology .carousel__nav .active {
   background-color: #ffffff;
   color: #0b0d17;
+  border: 1px solid rgb(255, 255, 255);
   font-family: "Bellefair";
   font-size: 16px;
 }
@@ -552,9 +686,22 @@ body {
   padding: 0;
   width: 100%;
 }
+@media all and (min-width: 800px) {
+  .section--technology .slide {
+    flex-direction: row-reverse;
+    align-items: flex-start;
+  }
+}
 .section--technology .slide__info__main {
   padding: 0 24px;
   padding-top: 100px;
+}
+@media all and (min-width: 800px) {
+  .section--technology .slide__info__main {
+    padding-left: 160px;
+    width: 100%;
+    padding-top: 111px;
+  }
 }
 .section--technology .slide__info__main__subtitle {
   font-size: 14px;
@@ -563,10 +710,21 @@ body {
   text-transform: uppercase;
   letter-spacing: 2.36px;
 }
+@media all and (min-width: 800px) {
+  .section--technology .slide__info__main__subtitle {
+    font-size: 16px;
+    letter-spacing: 2.7px;
+  }
+}
 .section--technology .slide__info__main__title {
   font-size: 24px;
   margin-top: 8px;
   margin-bottom: 16px;
+}
+@media all and (min-width: 800px) {
+  .section--technology .slide__info__main__title {
+    font-size: 56px;
+  }
 }
 .section--technology .slide__info__main::after {
   display: none;
@@ -579,12 +737,18 @@ body {
   width: 100%;
   height: 170px;
 }
+@media all and (min-width: 800px) {
+  .section--technology .slide__picture {
+    height: 515px;
+    width: 527px;
+  }
+}
 .section--technology .slide__picture .image {
   position: absolute;
   height: 100%;
   width: 100%;
   top: 0;
-  left: 0;
+  right: 0;
   object-fit: contain;
 }
 
