--- a/styles/sass/base/_variables.scss
+++ b/styles/sass/base/_variables.scss
@@ -16,13 +16,10 @@ $heading-main-mobile: 80px;
 $subheading-main-mobile: 16px;
 $text-mobile: 15px;
 
-// $heading-planet: 100px;
-// $heading-planet-mobile: 80px;
-// $heading-page: 56px;
-// $heading-page-sub: 32px;
-// $subheading-page: 14px;
-// $nav-text: 16px;
-
 $font-text: "Barlow";
 $font-title: "Bellefair";
 $font-subtitle: "Barlow Condensed";
+
+$padding-lr-desktop: 165px;
+$padding-lr-tablet: 40px;
+$padding-lr-mobile: 24px;
