--- a/styles/sass/components/_navbar.scss
+++ b/styles/sass/components/_navbar.scss
@@ -1,6 +1,6 @@
 .hide {
   display: none;
-  @include desktop-only() {
+  @include tablet-only() {
     display: block;
   }
 }
@@ -12,23 +12,27 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-
-  //   align-items: flex-start;
+  padding: 0 $padding-lr-mobile;
   padding-top: 24px;
-  padding-left: 24px;
-  padding-right: 24px;
 
+  @include tablet-only() {
+    padding-left: 39px;
+    padding-top: 40px;
+    padding-right: 0;
+    padding-top: 0;
+    // padding-right: 0;
+  }
   @include desktop-only() {
     padding-left: 56px;
     padding-top: 40px;
     padding-right: 0;
+    padding-top: 24px;
   }
   .logo-wrapper {
     position: relative;
-
     height: 40px;
     width: 40px;
-    @include desktop-only() {
+    @include tablet-only() {
       height: 48px;
       width: 48px;
     }
@@ -41,19 +45,10 @@
     }
   }
   .navbar-wrapper {
-    position: relative;
-    padding-left: 8.5%;
-    // padding-right: 11.5%;
-
-    // padding-top: 39px;
-    // padding-bottom: 39px;
+    padding-left: 8.5vw;
     background-color: rgb(255, 255, 255, 0.05);
-    // opacity: 0.1;
-    // filter: blur(8px);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
-    // backdrop-filter: blur(5px);
-
     //mobile
     position: absolute;
     height: 100vh;
@@ -62,12 +57,23 @@
     right: 0;
     z-index: 900;
 
+    @include tablet-only() {
+      display: flex;
+      align-items: center;
+      position: relative;
+      height: 96px;
+      padding: 0 3.3vw;
+
+      // padding-right: 11.5%;
+    }
+
     @include desktop-only() {
       display: flex;
       align-items: center;
       position: relative;
       height: 96px;
       padding-top: 0;
+      padding-left: 8.5vw;
       padding-right: 11.5%;
     }
     &::after {
@@ -79,30 +85,25 @@
       top: 50%;
       right: 94.4%;
       backdrop-filter: blur(8px);
+      @include tablet-only {
+        display: none;
+      }
+      @include desktop-only {
+        display: block;
+      }
     }
-    // &::before {
-    //   content: " ";
-    //   position: absolute;
-    //   width: 100%;
-    //   height: 100%;
-    //   background-color: #ffffff;
-    //   top: 0;
-    //   right: 0;
-    //   z-index: 0;
-    // }
   }
   .navbar {
     display: flex;
-    gap: 3vw;
     flex-direction: column;
-    row-gap: 32px;
-    color: $color-primary;
     padding: 0;
     margin: 0;
     width: 68vw;
-    // padding-right: 11.5%;
+    gap: 3vw;
+    row-gap: 32px;
+    color: $color-primary;
 
-    @include desktop-only() {
+    @include tablet-only() {
       flex-direction: row;
       align-items: center;
       height: 100%;
@@ -110,32 +111,29 @@
     }
     &__item {
       position: relative;
+      width: 100%;
       list-style-type: none;
       text-transform: uppercase;
       letter-spacing: 2.7px;
       z-index: 10;
-      width: 100%;
-
-      //   padding-right: 11.5%;
-
-      @include desktop-only() {
-        width: auto;
-        height: 100%;
+      @include tablet-only() {
         display: flex;
         align-items: center;
+        width: auto;
+        height: 100%;
       }
       &:hover {
         cursor: pointer;
         &::after {
           content: "";
           position: absolute;
-          background-color: $color-primary;
           right: 0;
           bottom: 0;
           width: 4px;
           height: 100%;
-
-          @include desktop-only() {
+          background-color: $color-primary;
+          opacity: 0.2;
+          @include tablet-only() {
             height: 3px;
             width: 100%;
             bottom: 0;
@@ -162,7 +160,7 @@
     height: 24px;
     width: 24px;
     z-index: 999;
-    @include desktop-only() {
+    @include tablet-only() {
       display: none;
     }
     .button--hamburger {
