--- a/styles/sass/components/_slide.scss
+++ b/styles/sass/components/_slide.scss
@@ -1,24 +1,22 @@
 .slide {
   position: relative;
-  width: calc(100vw - 48px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: calc(100vw - $padding-lr-mobile * 2);
   height: 100%;
-  top: 0;
-  left: 0;
+  padding: 0 $padding-lr-mobile;
+
+  text-align: center;
 
   scroll-snap-align: start;
   flex-shrink: 0;
 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  padding: 0 24px;
-
   @include desktop-only() {
     flex-direction: row;
     justify-content: space-between;
-    padding: 0 165px;
-    width: calc(100vw - 165px * 2);
+    padding: 0 $padding-lr-desktop;
+    width: calc(100vw - $padding-lr-desktop * 2);
     text-align: left;
   }
 
@@ -26,7 +24,12 @@
     display: flex;
     flex-direction: column;
     gap: 32px;
+
+    @include tablet-only {
+      padding: 0 97px;
+    }
     @include desktop-only() {
+      padding: 0;
       width: 445px;
     }
     &__main {
@@ -34,13 +37,18 @@
       padding-bottom: 32px;
 
       &__title {
+        margin: 0;
+        margin-top: 74px;
         font-size: $heading-planet-mobile;
         font-family: $font-title;
         font-weight: 400;
         text-transform: uppercase;
         color: $color-primary;
-        margin: 0;
-        margin-top: 74px;
+
+        @include tablet-only {
+          margin-top: 119px;
+        }
+
         @include desktop-only {
           font-size: $heading-planet;
         }
@@ -68,10 +76,17 @@
       display: flex;
       flex-direction: column;
       gap: 32px;
+
+      @include tablet-only() {
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 0 65px;
+      }
       @include desktop-only() {
         flex-direction: row;
         justify-content: flex-start;
         column-gap: 66px;
+        padding: 0;
       }
       &__distance {
         &__title {
@@ -115,6 +130,10 @@
     position: relative;
     width: 170px;
     height: 170px;
+    @include tablet-only {
+      width: 300px;
+      height: 300px;
+    }
     @include desktop-only() {
       width: 445px;
       height: 445px;
@@ -125,6 +144,158 @@
       width: 100%;
       top: 0;
       left: 0;
+    }
+  }
+}
+
+.section {
+  &--crew {
+    .slide {
+      @include tablet-only {
+        flex-direction: column-reverse;
+        justify-content: space-around;
+      }
+      @include desktop-only {
+        flex-direction: row-reverse;
+      }
+      &__info {
+        &__main {
+          padding-top: 100px;
+          @include tablet-only {
+            width: 458px;
+            padding-top: 0;
+            padding-bottom: 90px;
+          }
+          @include desktop-only {
+            width: 470px;
+          }
+          &__subtitle {
+            font-size: 16px;
+            font-weight: 400;
+            font-family: $font-title;
+            text-transform: uppercase;
+            opacity: 0.5;
+
+            @include tablet-only {
+              font-size: 24px;
+            }
+            @include desktop-only {
+              font-size: $heading-page-sub;
+            }
+          }
+          &__title {
+            margin-top: 8px;
+            margin-bottom: 16px;
+            font-size: 24px;
+            @include tablet-only {
+              font-size: 40px;
+            }
+            @include desktop-only {
+              font-size: $heading-page;
+            }
+          }
+          &::after {
+            top: 0;
+            left: 0;
+            opacity: 0.1;
+            @include desktop-only {
+              display: none;
+            }
+          }
+        }
+        &__extra {
+          display: none;
+        }
+      }
+      &__picture {
+        width: 327px;
+        height: 223px;
+
+        @include tablet-only {
+          height: 700px;
+          width: 600px;
+          overflow: hidden;
+        }
+
+        @include desktop-only {
+          height: 681px;
+          width: 100%;
+        }
+        .image {
+          object-fit: contain;
+        }
+      }
+    }
+  }
+
+  &--technology {
+    .slide {
+      padding: 0;
+      width: 100%;
+      @include desktop-only {
+        flex-direction: row-reverse;
+        align-items: flex-start;
+      }
+      &__info {
+        &__main {
+          padding: 0 $padding-lr-mobile;
+          padding-top: 100px;
+
+          @include tablet-only {
+            padding-top: 160px;
+          }
+
+          @include desktop-only {
+            width: 100%;
+            padding-left: calc(325px - $padding-lr-desktop);
+            padding-top: calc(137px - 26px);
+          }
+
+          &__subtitle {
+            font-size: 14px;
+            font-weight: 400;
+            font-family: $font-subtitle;
+            text-transform: uppercase;
+            letter-spacing: 2.36px;
+            @include tablet-only {
+              font-size: 16px;
+              letter-spacing: 2.7px;
+            }
+          }
+          &__title {
+            font-size: 24px;
+            margin-top: 8px;
+            margin-bottom: 16px;
+            @include tablet-only {
+              font-size: 40px;
+            }
+            @include desktop-only {
+              font-size: $heading-page;
+            }
+          }
+          &::after {
+            display: none;
+          }
+        }
+        &__extra {
+          display: none;
+        }
+      }
+      &__picture {
+        position: relative;
+        width: 100%;
+        height: 170px;
+        @include tablet-only {
+          height: 310px;
+        }
+        @include desktop-only {
+          height: 515px;
+          width: 527px;
+        }
+        .image {
+          object-fit: fill;
+        }
+      }
     }
   }
 }
