--- a/styles/main.css
+++ b/styles/main.css
@@ -122,6 +122,23 @@
     width: auto;
   }
 }
+.nav .navbar .active::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 4px;
+  height: 100%;
+  background-color: #ffffff;
+}
+@media all and (min-width: 420px) {
+  .nav .navbar .active::after {
+    height: 3px;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+  }
+}
 .nav .navbar__item {
   position: relative;
   width: 100%;
@@ -919,6 +936,10 @@ body {
     font-size: 18px;
     position: relative;
   }
+}
+
+.page {
+  position: relative;
 }
 
 /*# sourceMappingURL=main.css.map */
