--- a/styles/sass/components/_navbar.scss
+++ b/styles/sass/components/_navbar.scss
@@ -109,6 +109,24 @@
       height: 100%;
       width: auto;
     }
+
+    .active {
+      &::after {
+        content: "";
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        width: 4px;
+        height: 100%;
+        background-color: $color-primary;
+        @include tablet-only() {
+          height: 3px;
+          width: 100%;
+          bottom: 0;
+          left: 0;
+        }
+      }
+    }
     &__item {
       position: relative;
       width: 100%;
@@ -122,6 +140,7 @@
         width: auto;
         height: 100%;
       }
+
       &:hover {
         cursor: pointer;
         &::after {
